methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:1: error: not found: value growFlowers
growFlowers() {
^FlowerPot:2: error: not found: value faireFleur
  faireFleur(Color.red)
  ^FlowerPot:4: error: not found: value faireFleur
  faireFleur(Color.cyan)
  ^FlowerPot:9: error: not found: value faireFleur
  faireFleur(Color.orange)
  ^FlowerPot:14: error: not found: value faireFleur
  faireFleur(Color.green)
  ^FlowerPot:16: error: not found: value faireFleur
  faireFleur(Color.pink)
  ^FlowerPot:21: error: not found: value faireFleur
faireFleur(c:Color) {
^FlowerPot:21: error: not found: value c
faireFleur(c:Color) {
           ^FlowerPot:26: error: not found: value c
  setCouleurBrosse(c:Color)
                   ^